tests/fixtures/fail/functions/invalid_arg_count.walrus
fn one : a {
    return a;
}

println(one(1, 2));
